--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "mrcodefinger/12tones",
     "description": "This script display all twelve tones in random order.",
     "type": "library",
+    "version": "0.1.0",
     "require-dev": {
         "phpunit/phpunit": "^8.5"
     },
