Rename to TwelveTone.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "mrcodefinger/12tones",
+    "name": "mrcodefinger/twelvetones",
     "description": "This script displays all twelve tones in random order.",
     "type": "library",
     "version": "0.1.0",
