--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,11 @@
     "description": "This script displays all twelve tones in random order.",
     "type": "library",
     "version": "0.1.0",
+    "autoload": {
+        "classmap": [
+            "src/"
+        ]
+    },
     "require-dev": {
         "phpunit/phpunit": "^8.5"
     },
